@@ -267,11 +267,7 @@ def git_unbundle_code():
 
 
 def git_update_working_copy(branch):
-    cmd('git checkout --force {branch}'.format(branch=branch))
-    cmd('git clean -fd')  # merge fails, if there are files around.
-    # For git <2.0:
-    cmd('git config merge.defaultToUpstream true')
-    cmd('git merge --ff-only')
+    cmd('git reset --hard {branch}'.format(branch=branch))
     id, _ = cmd('git rev-parse HEAD')
     return id.strip()
 
